--- a/index.html
+++ b/index.html
@@ -16,8 +16,71 @@
 
     <body>
         <section class="cover">
-            <img src="" alt="">
+            <img src="images/donation9.jpg" alt="Photo of donation">
+            <div class="backlayer"></div>
+
+            <div class="text-on-img center">
+                <h1 class="white">Let's Help Those Who Are More In Need</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset. No duo populo animal noluisse, enim</p>
+                <a href="" class="button">Donate Now</a>
+            </div>
         </section>
+
+
+        <section class="donate center">
+            <div class="">
+                <h2>Donate Today</h2>
+                <p class="gray">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                    deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+            <div class="amount gray flex">
+                <div>100tk</div>
+                <div id="orange-box">200tk</div>
+                <div>500tk</div>
+                <div>1000tk</div>
+                <div>5000tk</div>
+            </div>
+            <p class="gray">Other amount(Taka)
+                <hr>
+            </p>
+            <a href="" class="button">Donate Now</a>
+        </section>
+
+
+            <div class="center">
+                <h2>Our Donation Plan</h2>
+                <p class="gray">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                    deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+            <div class="flex plan">
+                <div class="card color-1">
+                    <img src="icons/food.png" alt="icon of food">
+                    <h3>Food for a family</h3>
+                    <p class="gray">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="card color-2">
+                    <img src="icons/shelter.png" alt="icon of shelter">
+                    <h3>Shelter for a family</h3>
+                    <p class="gray">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="card color-3">
+                    <img src="icons/Frame-1.png" alt="symbol for Education">
+                    <h3>Education for a child</h3>
+                    <p class="gray">Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+            </div>
+
+
     </body>
 
 </html>
