added other amount form

--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
                 <div>1000tk</div>
                 <div>5000tk</div>
             </div>
-            <p class="gray">Other amount(Taka)
-                <hr>
-            </p>
+            
+            <form>
+                <label for="amount"></label>
+                <input type="text" value="Other Amount (Taka)">
+            </form>
+
             <a href="" class="button">Donate Now</a>
+
         </section>
 
 
@@ -78,8 +82,7 @@
                         sint. Velit officia consequat duis enim
                         velit mollit.</p>
                 </div>
-            </div>
-
+            </div>  
 
     </body>
 
