--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
             rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
         <title>Donate Today</title>
     </head>
 
@@ -41,7 +42,7 @@
                 <div>1000tk</div>
                 <div>5000tk</div>
             </div>
-            
+
             <form>
                 <label for="amount"></label>
                 <input type="text" value="Other Amount (Taka)">
@@ -51,7 +52,7 @@
 
         </section>
 
-
+        <section>
             <div class="center">
                 <h2>Our Donation Plan</h2>
                 <p class="gray">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
@@ -82,7 +83,60 @@
                         sint. Velit officia consequat duis enim
                         velit mollit.</p>
                 </div>
-            </div>  
+            </div>
+        </section>
+        <section class="flex contribute">
+            <div>
+                <h2>Their lives depend on your donation</h2>
+                <p class="gray">Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim <br>
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.</p>
+                <a href="" class="button">How to contribute?</a>
+            </div>
+            <div>
+                <img src="images/donation6.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="contribution">
+            <h2>Our Contributions</h2>
+            <p>Street Child</p>
+            <div class="container">
+                <div class="progress street-child bold">90%</div>
+            </div>
+            <p>Flood in Sylhet</p>
+            <div class="container">
+                <div class="progress flood bold">60%</div>
+            </div>
+
+            <p>Covid-19</p>
+            <div class="container">
+                <div class="progress covid bold">40%</div>
+            </div>
+
+            <p>Cyclone Sidr</p>
+            <div class="container">
+                <div class="progress cyclone bold">30%</div>
+            </div>
+
+
+        </section>
+
+        <section class="update center">
+            <h2>Get My Updates</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="Email flex bold">
+                <input type="email" value="Email" class="gray">
+                <a href="" class="subscribe bold">Subscribe</a>
+            </div>
+        </section>
+        <footer class="end">
+            <h2>Never Give Up</h2>
+            <p id="c-font">I'm gonna do it</p>
+        </footer>
 
     </body>
 
