--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="icons/icon13.svg">
         <title>Donate Today</title>
     </head>
 
