Added meaningful articles

--- a/index.html
+++ b/index.html
@@ -1,153 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="donate-today.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="icons/icon13.svg" />
-    <title>Donate Today</title>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="donate-today.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="shortcut icon" href="icons/icon13.svg" />
+		<title>Donate Today</title>
+	</head>
 
-  <body>
-    <section class="cover">
-      <img src="images/donation9.jpg" alt="Photo of donation" />
-      <div class="backlayer"></div>
+	<body>
+		<section class="cover">
+			<img src="images/donation9.jpg" alt="Photo of donation" />
+			<div class="backlayer"></div>
 
-      <div class="text-on-img center">
-        <h1 class="white">Let's Help Those Who Are More In Need</h1>
-        <p>
-          Having body structure like human doesn't make you the ture human being. There are a lot of people around you who are suffering from numorous problems and sorros. A human must have that emotion which inspires him to help the poor.
-        </p>
-        <a href="" class="button">Donate Now</a>
-      </div>
-    </section>
+			<div class="text-on-img center">
+				<h1 class="white">Let's Help Those Who Are More In Need</h1>
+				<p>
+					Having body structure like human doesn't make you the ture human
+					being. There are a lot of people around you who are suffering from
+					numorous problems and sorrows. A human must have that emotion which
+					inspires him to help the poor.
+				</p>
+				<a href="" class="button">Donate Now</a>
+			</div>
+		</section>
 
-    <section class="donate center">
-      <div class="">
-        <h2>Donate Today</h2>
-        <p class="gray">
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli <br />
-          deterruisset. No duo populo animal noluisse, enim
-        </p>
-      </div>
-      <div class="amount gray flex">
-        <div>100tk</div>
-        <div id="orange-box">200tk</div>
-        <div>500tk</div>
-        <div>1000tk</div>
-        <div>5000tk</div>
-      </div>
+		<section class="donate center">
+			<div class="">
+				<h2>Donate Today</h2>
+				<p class="gray">
+					Select an amount to donate.<br />
+					Your every single donation means a lot to us.
+				</p>
+			</div>
+			<div class="amount gray flex">
+				<div>100tk</div>
+				<div id="orange-box">200tk</div>
+				<div>500tk</div>
+				<div>1000tk</div>
+				<div>5000tk</div>
+			</div>
 
-      <form>
-        <label for="amount"></label>
-        <input type="text" value="Other Amount (Taka)" />
-      </form>
+			<form>
+				<label for="amount"></label>
+				<input type="text" value="Other Amount (Taka)" />
+			</form>
 
-      <a href="" class="button">Donate Now</a>
-    </section>
+			<a href="" class="button">Donate Now</a>
+		</section>
 
-    <section>
-      <div class="center">
-        <h2>Our Donation Plan</h2>
-        <p class="gray">
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli <br />
-          deterruisset. No duo populo animal noluisse, enim
-        </p>
-      </div>
-      <div class="flex plan">
-        <div class="card color-1">
-          <img src="icons/food.png" alt="icon of food" />
-          <h3>Food for a family</h3>
-          <p class="gray">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit.
-          </p>
-        </div>
-        <div class="card color-2">
-          <img src="icons/shelter.png" alt="icon of shelter" />
-          <h3>Shelter for a family</h3>
-          <p class="gray">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit.
-          </p>
-        </div>
-        <div class="card color-3">
-          <img src="icons/Frame-1.png" alt="symbol for Education" />
-          <h3>Education for a child</h3>
-          <p class="gray">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit.
-          </p>
-        </div>
-      </div>
-    </section>
+		<section>
+			<div class="center">
+				<h2>Our Donation Plan</h2>
+				<p class="gray center">
+					Let's have a look at our donation plans <br />
+					We donate for food, shelter and child education
+				</p>
+			</div>
+			<div class="flex plan">
+				<div class="card color-1">
+					<img src="icons/food.png" alt="icon of food" />
+					<h3>Food for a family</h3>
+					<p class="gray">
+						There are a lot of people who don't have food to eat three times a
+						day. Some spend the whole day just eating one meal a day. We are
+						here to help them.
+					</p>
+				</div>
+				<div class="card color-2">
+					<img src="icons/shelter.png" alt="icon of shelter" />
+					<h3>Shelter for a family</h3>
+					<p class="gray">
+						You can see many homeless people around you. They don't have enough
+						money to build their own house. So we helps them by creating
+						shelter. Your donation their shelter.
+					</p>
+				</div>
+				<div class="card color-3">
+					<img src="icons/Frame-1.png" alt="symbol for Education" />
+					<h3>Education for a child</h3>
+					<p class="gray">
+						Most of the poor people are illiterate. So they don't know about the
+						benifits of education. They use their child as labours to earn
+						money. We provide full free education system for them.
+					</p>
+				</div>
+			</div>
+		</section>
 
-    <section class="flex contribute">
-      <div>
-        <h2>Their lives depend on your donation</h2>
-        <p class="gray">
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli deterruisset. No duo populo animal noluisse, enim <br />
-          Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-          falli deterruisset.
-        </p>
-        <a href="" class="button">How to contribute?</a>
-      </div>
-      <div>
-        <img src="images/donation6.jpg" alt="" />
-      </div>
-    </section>
+		<section class="flex contribute">
+			<div>
+				<h2>Their lives depend on your donation</h2>
+				<p class="gray">
+					Your small donation can create a huge impact. Come and join with us.
+					Let's save these people, make some betterment of our society together.
+					You can also contribute us by joining our team. So, what are you
+					waiting for? Let's make some sad faces happy!
+				</p>
+				<a href="" class="button">How to contribute?</a>
+			</div>
+			<div>
+				<img src="images/donation6.jpg" alt="" />
+			</div>
+		</section>
 
-    <section class="contribution">
-      <h2>Our Contributions</h2>
-      <p>Street Child</p>
-      <div class="container">
-        <div class="progress street-child bold">90%</div>
-      </div>
-      <p>Flood in Sylhet</p>
-      <div class="container">
-        <div class="progress flood bold">60%</div>
-      </div>
+		<section class="contribution">
+			<h2>Our Contributions</h2>
+			<p>Street Child</p>
+			<div class="container">
+				<div class="progress street-child bold">90%</div>
+			</div>
+			<p>Flood in Sylhet</p>
+			<div class="container">
+				<div class="progress flood bold">60%</div>
+			</div>
 
-      <p>Covid-19</p>
-      <div class="container">
-        <div class="progress covid bold">40%</div>
-      </div>
+			<p>Covid-19</p>
+			<div class="container">
+				<div class="progress covid bold">40%</div>
+			</div>
 
-      <p>Cyclone Sidr</p>
-      <div class="container">
-        <div class="progress cyclone bold">30%</div>
-      </div>
-    </section>
+			<p>Cyclone Sidr</p>
+			<div class="container">
+				<div class="progress cyclone bold">30%</div>
+			</div>
+		</section>
 
-    <section class="update center">
-      <h2>Get My Updates</h2>
-      <p>
-        Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-        deterruisset. No duo populo animal noluisse, enim
-      </p>
-      <div class="Email flex bold">
-        <input type="email" value="Email" class="gray" />
-        <a href="" class="subscribe bold">Subscribe</a>
-      </div>
-    </section>
+		<section class="update center">
+			<h2>Get My Updates</h2>
+			<p>
+				To know about our progression, to track your donation put your email
+				here and make a subscription. We will inform you with all our updates.
+			</p>
+			<div class="Email flex bold">
+				<input type="email" value="Email" class="gray" />
+				<a href="" class="subscribe bold">Subscribe</a>
+			</div>
+		</section>
 
-    <footer class="end">
-      <h2>Never Give Up</h2>
-      <p id="c-font">I'm gonna do it</p>
-    </footer>
-  </body>
+		<footer class="end">
+			<h2>Never Give Up</h2>
+			<p id="c-font">I'm gonna do it</p>
+		</footer>
+	</body>
 </html>
